After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781247 - Directions from previous recipe in new recipe
Directions from previous recipe in new recipe
Status: RESOLVED FIXED
Product: recipes
Classification: Other
Component: general
1.0.x
Other Linux
: Normal minor
: ---
Assigned To: Recipes maintainer(s)
Recipes maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-04-13 05:35 UTC by Bruce Pieterse
Modified: 2017-04-16 02:21 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bruce Pieterse 2017-04-13 05:35:12 UTC
Steps to reproduce:

- Add a new recipe and save it.
- Click New to add another recipe.
- Click on the preview button for directions with no directions entered. The previous recipe instructions are shown.

[Workaround]

Enter a space and click on preview or start typing out the directions for the recipe then click preview.

I captured a few recipes before seeing this, so it might not show after the first recipe, but after a few being captured.

Filed downstream at https://bugs.launchpad.net/ubuntu/+source/gnome-recipes/+bug/1682071