edit page: Ensure to clear the preview

When clearing the edit page, we were forgetting the
instructions preview. To fix this, reset the cooking
preview data and make sure that the preview itself
cleans up its internal state when new data is set.

https://bugzilla.gnome.org/show_bug.cgi?id=781247